[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "*", features = ["full"]}
serde_json = {version = "1.0.87"}
serde = {version = "*", features = ["derive"]}
lazy_static = "*"

[[bin]]
name = "client"

[lib]
name="message"
path="src/message.rs"

